Week 6 Cleanup and Push

--- a/week-6/grashorn-in-n-out-books.css
+++ b/week-6/grashorn-in-n-out-books.css
@@ -24,6 +24,7 @@
 .card-title, .app-header, #txtSequenceResults {
     text-align: center;
     font-size: 28px;
+    
 }
 
 /*adjust weight and margin of header*/
@@ -43,6 +44,7 @@
 
 /*line up return link*/
 .return-link {
+    padding-top: 15px;
     margin-left: 25%;
     text-align: left;
     
@@ -65,6 +67,8 @@ th {
 /* adjusted as directed */
 td, th {
     border: 1px solid #ddd;
+    font-size: 20px;
+    padding: 10px;
 }
 /* adjusted as directed */
 tr:hover {
@@ -72,3 +76,5 @@ tr:hover {
     color: #4f3674;
     cursor: pointer;
 }
+
+ 
